# random_student_no

./: Cargo.toml
src/: app.css  app.rs  main.rs
src/res/: en_US.ftl  zh_CN.ftl
