[package]
name = "randno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = "0.4.0"
dirs = "5.0.1"
itoap = "1.0.1"
open = "5.0.0"
rand = "0.8.5"
vizia = {git = "https://github.com/vizia/vizia"}

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = "debuginfo"
